# auto-civitai-cpp

./: .gitmodules  CMakeLists.txt  README.md  clang-format  dataset_vars.json  main.cpp  setup.cmake
sources/: civitai.cpp  civitai.hpp  dataset.cpp  dataset.hpp
